[tool.poetry]
name = "rdp-manipulations"
version = "0.3.4"
description = "Image based tool for RDP (Remote Desktop Protocol) manipulations, automations and testing via Python and Apache Guacamole"
authors = ["Marat Azizov <etomarat@gmail.com>"]
repository = "https://github.com/etomarat/rdp-manipulations"
documentation = "https://github.com/etomarat/rdp-manipulations/blob/main/README.md"
license = "Apache License 2.0"
keywords = ["rdp", "guacamole", "automation", "image-based", "Remote Desktop Protocol"]
readme = "README.md"
packages = [
  {include = "rdp_manipulations"},
  {include = "image_processing"},
  {include = "image_asserts"},
  {include = "image_logs"}
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.27.1"
numpy = "^1.23.4"
opencv-python-headless = "^4.6.0.66"
environs = "^9.5.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
autopep8 = "^1.7.0"
novella = "^0.2.3"
pydoc-markdown = "^4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
